Attempt 2 at fixing overflow-x

--- a/components/common/navigation/Navigation.module.css
+++ b/components/common/navigation/Navigation.module.css
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   padding-top: 25px;
   padding-bottom: 25px;
 }
