--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
     "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   margin: 0;
+  overflow-x: hidden;
 }
 
 .top-left-column {
